fixed title picture not covering full page

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #titelInFoto{
-  max-width: 100%;
+  width: 100%;
   height: auto;
   padding-left: 0px;
   padding-right: 0px;
